--- a/src/index.html
+++ b/src/index.html
@@ -2,55 +2,80 @@
 <html lang="en">
 
 <head>
-     <meta charset="utf-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="viewport" content="width=device-width, initial-scale=1">
-     <title>RikkiStaterium</title>
-     <!-- Bootstrap -->
-     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
-     <link href="css/app.css" rel="stylesheet">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>RikkiStaterium</title>
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
+    crossorigin="anonymous">
+  <link href="css/app.css" rel="stylesheet">
 
 </head>
 
 <body>
-     <div class="container">
-          <div class="jumbotron text-center">
-               <h1>Staterium</h1>
-          </div>
-     </div>
+  <div class="container">
+    <div class="jumbotron text-center">
+      <h1>Staterium</h1>
+    </div>
+  </div>
 
-
-     <div class="card" style="width: 18rem;">
-      <img class="card-img-top" src=".../100px180/" alt="Card image cap">
-      <div class="card-body">
+  <div class="nav justify-content-center">
+    <div class="card" style="width: 18rem;">
+      <img class="card-img-top" src="https://www.designevo.com/res/templates/thumb_small/symmetrical-red-and-blue-polygon-company.png"
+        alt="Card image cap">
+      <div class="card-body justify-content-center">
         <h5 class="card-title">Card title</h5>
+        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div align="center" class="btn-group btn-group-lg " role="group" aria-label="Basic example" style="display: block">
+          <button type="button" class="btn btn-success"> &nbsp&nbspStake&nbsp&nbsp </button>
+          <button type="button" class="btn btn-primary">Unstake</button>
+        </div>
       </div>
     </div>
 
+    <div class="card " style="width: 18rem;">
+      <img class="card-img-top" src="https://www.designevo.com/res/templates/thumb_small/blue-wing-and-circle.png" alt="Card image cap">
+      <div class="card-body justify-content-center">
+        <h5 class="card-title">Card title</h5>
+        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <div align="center" class="btn-group btn-group-lg " role="group" aria-label="Basic example" style="display: block">
+          <button type="button" class="btn btn-success"> &nbsp&nbspStake&nbsp&nbsp </button>
+          <button type="button" class="btn btn-primary">Unstake</button>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+
+  <div id="footer" class="container">
+    <nav class="navbar navbar-default navbar-fixed-bottom">
+      <div class="navbar-inner navbar-content-center text-center">
+        <p class="text-muted" credit>
+          <a href="#">Staterium</a> - &copy; 2018 -
+          <a href="#">Rikki407</a>
+        </p>
+      </div>
+    </nav>
+  </div>
 
 
 
-     <div id="footer" class="container">
-          <nav class="navbar navbar-default navbar-fixed-bottom">
-               <div class="navbar-inner navbar-content-center text-center">
-                    <p class="text-muted" credit><a href="#">Staterium</a> - &copy; 2018 - <a href="#">Rikki407</a></p>
-               </div>
-          </nav>
-     </div>
 
 
-
-
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
-    <script src="js/web3.min.js"></script>
-    <script src="js/truffle-contract.js"></script>
-    <script src="js/app.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
+    crossorigin="anonymous"></script>
+  <script src="js/web3.min.js"></script>
+  <script src="js/truffle-contract.js"></script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
