--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
   </nav>
 
   <div class="nav justify-content-center" style="position: relative; top: 70px">
-    <div class="card" style="width: 30rem; margin: 10px;">
+    <div class="card">
       <img class="card-img-top" src="https://www.designevo.com/res/templates/thumb_small/symmetrical-red-and-blue-polygon-company.png"
         alt="Card image cap">
       <div class="card-body justify-content-center">
@@ -55,7 +55,7 @@
       </div>
     </div>
 
-    <div class="card " style="width: 30rem; margin: 10px;">
+    <div class="card">
       <img class="card-img-top" src="https://www.designevo.com/res/templates/thumb_small/blue-wing-and-circle.png" alt="Card image cap">
       <div class="card-body justify-content-center">
         <h4 class="card-title">Project B</h4>
@@ -66,13 +66,13 @@
         <p class="card-text">Deserunt nostrud non ipsum reprehenderit laboris mollit. Enim est est exercitation cillum consequat in nostrud excepteur
           eu laborum fugiat ad. Veniam excepteur aute commodo culpa proident pariatur. Eiusmod aliqua elit elit consequat
           adipisicing commodo cupidatat elit excepteur quis mollit khjghvad kgdbjdjk kjsdbbad yeh akjhqa aheqe ahqedk.</p>
-        <div align="center" class="btn-group btn-group-lg"  role="group" aria-label="Basic example" style="display: block;height: 100%">
+        <div align="center" class="btn-group btn-group-lg" role="group" aria-label="Basic example" style="display: block;height: 100%">
           <button type="button" class="btn btn-success"> &nbsp&nbspStake&nbsp&nbsp </button>
           <button type="button" class="btn btn-primary">Unstake</button>
         </div>
       </div>
     </div>
-    <div  id="footer" class="container">
+    <div id="footer" class="container">
       <nav class="navbar navbar-default navbar-fixed-bottom justify-content-center">
         <div class="navbar-inner navbar-content-center text-center">
           <p class="text-muted" credit>
