--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
           Aute labore laborum qui ea est pariatur officia quis velit. Aute duis labore ex officia officia nulla qui culpa
           aliquip nostrud veniam non. Adipisicing est consectetur occaecat nisi aliquip in aliquip.</p>
         <div align="center" class="btn-group btn-group-lg" role="group" aria-label="Basic example" style="display: block;height: 100%">
-          <button type="button" class="btn btn-success"> &nbsp&nbspStake&nbsp&nbsp </button>
+          <button type="button" class="btn btn-success" data-toggle="modal" data-target="#stakeModal"> &nbsp&nbspStake&nbsp&nbsp </button>
           <button type="button" class="btn btn-primary">Unstake</button>
         </div>
       </div>
@@ -67,11 +67,35 @@
           eu laborum fugiat ad. Veniam excepteur aute commodo culpa proident pariatur. Eiusmod aliqua elit elit consequat
           adipisicing commodo cupidatat elit excepteur quis mollit khjghvad kgdbjdjk kjsdbbad yeh akjhqa aheqe ahqedk.</p>
         <div align="center" class="btn-group btn-group-lg" role="group" aria-label="Basic example" style="display: block;height: 100%">
-          <button type="button" class="btn btn-success"> &nbsp&nbspStake&nbsp&nbsp </button>
+          <button type="button" class="btn btn-success" data-toggle="modal" data-target="#stakeModal"> &nbsp&nbspStake&nbsp&nbsp </button>
           <button type="button" class="btn btn-primary">Unstake</button>
         </div>
       </div>
     </div>
+    <div class="card"> 
+       
+    </div>
+
+    <!-- Modal -->
+<div class="modal fade" id="stakeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Stake in Eth</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-success">Stake</button>
+        </div>
+      </div>
+    </div>
+  </div>
     <div id="footer" class="container">
       <nav class="navbar navbar-default navbar-fixed-bottom justify-content-center">
         <div class="navbar-inner navbar-content-center text-center">
