--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     </div>
   </nav>
 
-  <div class="nav justify-content-center" style="position: relative; top: 70px">
+  <div class="container nav justify-content-center" style="position: relative; top: 70px">
     <div class="card">
       <img class="card-img-top" src="https://www.designevo.com/res/templates/thumb_small/symmetrical-red-and-blue-polygon-company.png"
         alt="Card image cap">
@@ -66,15 +66,22 @@
         <p class="card-text">Deserunt nostrud non ipsum reprehenderit laboris mollit. Enim est est exercitation cillum consequat in nostrud excepteur
           eu laborum fugiat ad. Veniam excepteur aute commodo culpa proident pariatur. Eiusmod aliqua elit elit consequat
           adipisicing commodo cupidatat elit excepteur quis mollit khjghvad kgdbjdjk kjsdbbad yeh akjhqa aheqe ahqedk.</p>
-        <div align="center" class="btn-group btn-group-lg" role="group" aria-label="Basic example" style="display: block;height: 100%">
+        <div align="center" class="btn-group btn-group-lg" role="group" aria-label="Basic example" style="display: block;">
           <button type="button" class="btn btn-success" data-toggle="modal" data-target="#stakeModal"> &nbsp&nbspStake&nbsp&nbsp </button>
           <button type="button" class="btn btn-primary">Unstake</button>
         </div>
       </div>
     </div>
-    <div class="card"> 
-       
+    <div class="container" style="margin-right: 20px">
+      <div  class="card" style="width: 100%;">
+          <div  class="btn-group btn-group-lg" role="group" aria-label="Basic example" align="center" style="display: block">
+              <button type="button" class="btn btn-warning" disabled>Prev</button>
+              <button type="button" class="btn btn-danger">Stop</button>
+              <button type="button" class="btn btn-warning">Next</button>
+            </div>
+      </div>
     </div>
+    <div class="card"></div>
 
     <!-- Modal -->
 <div class="modal fade" id="stakeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
