styling game page complete

--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@
       </div>
     </div>
     <div class="container" style="margin-right: 20px">
-      <div  class="card" style="width: 100%;">
+      <div  class="card" style="width: 100%; background-color: rgb(74, 84, 107)">
           <div  class="btn-group btn-group-lg" role="group" aria-label="Basic example" align="center" style="display: block">
               <button type="button" class="btn btn-warning" disabled>Prev</button>
               <button type="button" class="btn btn-danger">Stop</button>
@@ -81,7 +81,7 @@
             </div>
       </div>
     </div>
-    <div class="card"></div>
+    <div class="card" style="width: 100%;"></div>
 
     <!-- Modal -->
 <div class="modal fade" id="stakeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
