--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,8 @@
         <h5 class="card-subtitle mb-2 text-muted">Founder</h5>
         <p class="card-text">Deserunt nostrud non ipsum reprehenderit laboris mollit. Enim est est exercitation cillum consequat in nostrud excepteur
           eu laborum fugiat ad. Veniam excepteur aute commodo culpa proident pariatur. Eiusmod aliqua elit elit consequat
-          adipisicing commodo cupidatat elit excepteur quis mollit khjghvad kgdbjdjk kjsdbbad yeh akjhqa aheqe ahqedk.</p>
+          adipisicing commodo cupidatat elit excepteur quis mollit khjghvad kgdbjdjk kjsdbbad yeh akjhqa aheqe ahqedk excepteur aute commodo culpa
+          proident pariatur.</p>
         <div align="center" class="btn-group btn-group-lg" role="group" aria-label="Basic example" style="display: block;">
           <button type="button" class="btn btn-success" data-toggle="modal" data-target="#stakeModal"> &nbsp&nbspStake&nbsp&nbsp </button>
           <button type="button" class="btn btn-primary">Unstake</button>
@@ -73,7 +74,7 @@
       </div>
     </div>
     <div class="container" style="margin-right: 20px">
-      <div  class="card" style="width: 100%; background-color: rgb(74, 84, 107)">
+      <div  class="card" style="width: 100%; background-color: rgb(38, 55, 94)">
           <div  class="btn-group btn-group-lg" role="group" aria-label="Basic example" align="center" style="display: block">
               <button type="button" class="btn btn-warning" disabled>Prev</button>
               <button type="button" class="btn btn-danger">Stop</button>
