--- a/src/index.html
+++ b/src/index.html
@@ -141,6 +141,7 @@
     crossorigin="anonymous"></script>
   <script src="js/web3.min.js"></script>
   <script src="js/truffle-contract.js"></script>
+  <script src="js/dummy-matches.js"></script>
   <script src="js/app.js"></script>
 </body>
 
